# JNI_Shared_libs

./: .gitignore  CMakeLists.txt  README.md  SoaHacImpl.cpp  SoaWindowsImpl.cpp  hac-lib.cpp  window-lib.cpp
generate/: impl_type_uint64_t.h
generate/CalculatorClient/: executable.h
generate/huawei/: calculatorinterface_proxy.h
header/: SoaHacImpl.h  SoaInterface.h  SoaWindowsImpl.h  Utils.h  calculator_client.h  commonDef.h
includes/: calculatorclient_network_binding.h  calculatorserver_network_binding.h
includes/huawei/: calculatorinterface_common.h  calculatorinterface_proxy.h  calculatorinterface_skeleton.h
src/: SoaHacImpl.cpp  SoaWindowsImpl.cpp  hac-lib.cpp  window-lib.cpp
